samples/_failures_safe/1761287722_0ed337_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9eedee27.c: In function ‘handle_event’:
./samples/SAFE/__tmp_9eedee27.c:155:13: error: expected declaration or statement at end of input
  155 |             if (!write_data(sm)) {
      |             ^~
./samples/SAFE/__tmp_9eedee27.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9eedee27.c:155:13: error: expected declaration or statement at end of input
